# youtube-dl-test

./: .gitignore  1.xml  README.md  demo.xml  generate_rss.py  playlists.txt  pyproject.toml  youtube-dl.conf  youtube.com_cookies.txt
templates/: rss.xml.jinja2
