[tool.poetry]
name = "youtube2podcast"
version = "0.1.0"
description = "convert youtube playlist to podcast"
authors = ["Artin <lengthmin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
ujson = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
